WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283717
Fix macOS unified build issue
https://bugs.webkit.org/show_bug.cgi?id=283717
Summary
Fix macOS unified build issue
Anne van Kesteren
Reported
2024-11-26 07:23:53 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2024-11-26 07:24:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37161
EWS
Comment 2
2024-11-26 07:36:59 PST
Committed
287097@main
(6f62324798dc): <
https://commits.webkit.org/287097@main
> Reviewed commits have been landed. Closing PR #37161 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-26 07:37:12 PST
<
rdar://problem/140584273
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug