Fix macOS unified build issue https://bugs.webkit.org/show_bug.cgi?id=283717

Reviewed by Youenn Fablet.

PDFPluginBase::navigateToURL uses the FrameLoader API.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:

Canonical link: https://commits.webkit.org/287097@main